[package]
name = "lexi-rs"
version = "0.1.6"
edition = "2021"
description = "a client for lexidb - an in memory data structure database"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "net", "io-util", "macros"] }
